--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "cloudinary": "^2.8.0",
     "mongoose": "^9.1.2",
     "next": "16.1.1",
     "next-cloudinary": "^6.17.5",
